# homelab

./: .env.example  .envrc  .envrc.example  .gitignore  Cargo.toml  Gemfile  MULTI_PLATFORM.md  Makefile  README.md  build.rs  install.ps1  install.sh
.github/actions/build-docker-image/: action.yml
.github/actions/build-rust-cli/: action.yml
.github/actions/check-changes/: action.yml
.github/actions/create-release/: action.yml
.github/actions/determine-release-type/: action.yml
.github/actions/get-version/: action.yml
.github/actions/install-linux-deps/: action.yml
.github/actions/prepare-release-archives/: action.yml
.github/actions/release-cli/: action.yml
.github/actions/release-docker/: action.yml
.github/actions/setup-docker-build/: action.yml
.github/actions/setup-rust-build/: action.yml
.github/actions/upload-rust-artifact/: action.yml
.github/workflows/: README.md  build-docker.yml  build-linux.yml  build-macos.yml  build-pia-vpn.yml  build-windows.yml  build.yml  ci.yml  promote.yml  release.yml
compose/: gluetun-pia.docker-compose.yml  media.docker-compose.yml  nginx-proxy-manager.docker-compose.yml  openvpn-pia-portainer.docker-compose.yml  openvpn-pia.docker-compose.yml  portainer-agent.docker-compose.yml  portainer-be.docker-compose.yml  portainer.docker-compose.yml
crates/halvor-ffi-macro/: Cargo.toml
docs/: GHCR_SETUP.md  configuration.md  development.md  ipv6-setup.md  setup.md  usage.md  vpn-setup.md  workflows.md
fastlane/: Fastfile  Matchfile  README.md
halvor-android/: README.md  build.gradle.kts
halvor-android/src/main/kotlin/dev/scottkey/halvor/: GeneratedBindings.kt  HalvorClient.kt
halvor-ffi-macro/src/: lib.rs
halvor-swift/: .gitignore  ARCHITECTURE.md  Makefile  Package.swift  QUICKSTART.md  README.md  SETUP.md  USAGE.md  build.sh  create-xcode-project.sh  project.yml
halvor-swift/Examples/: AsyncExample.swift  BasicExample.swift
halvor-swift/Sources/HalvorApp/: ContentView.swift  HalvorApp.swift  Info-iOS.plist  Info-macOS.plist
halvor-swift/Sources/HalvorSwift/: HalvorClient.swift
halvor-swift/Sources/HalvorSwiftFFI/halvor_ffi/: generated_swift_bindings.swift  halvor_ffi.h  halvor_ffi.swift
halvor-web/: Dockerfile  README.md  docker-compose.yml  package-lock.json  package.json  tsconfig.json  vite.config.ts
halvor-web/src/lib/: api.ts
halvor-web/src/lib/halvor-ffi/: generated-bindings.ts  halvor-wasm.ts  halvor_ffi_wasm.d.ts
halvor-web/src/routes/: +page.svelte
openvpn-container/: Dockerfile
openvpn-container/scripts/: entrypoint.sh
scripts/: README.md  detect-ipv6-subnet.sh  install.sh
src/: backup.rs  config.rs  config_manager.rs  crypto.rs  docker.rs  lib.rs  main.rs  portainer.rs  provision.rs  smb.rs  ssh.rs  sync.rs  tailscale.rs  update.rs  vpn.rs
src/agent/: api.rs  discovery.rs  server.rs  sync.rs
src/commands/: agent.rs  backup.rs  build.rs  config.rs  dev.rs  docker.rs  generate.rs  install.rs  list.rs  migrate.rs  mod.rs  npm.rs  portainer.rs  provision.rs  smb.rs  sync.rs  tailscale.rs  uninstall.rs  update.rs  utils.rs  vpn.rs
src/config/: env_file.rs  mod.rs  service.rs
src/db/: README.md  mod.rs
src/db/core/: builder.rs  client.rs  errors.rs  generator.rs  macros.rs  mod.rs  partial_update.rs  row_builder.rs  schema.rs  table.rs
src/db/migrations/: 001_initial_schema.rs  002_add_host_config_columns.rs  003_add_smb_servers_table.rs  004_fix_host_info_id_column.rs  generated.rs  mod.rs
src/ffi/: c_ffi.rs  client.rs  mod.rs
src/provision/: local.rs  mod.rs  remote.rs  utils.rs
src/services/: backup.rs  host.rs  mod.rs  npm.rs  sync.rs  tailscale.rs  web.rs
src/services/docker/: build.rs  mod.rs
src/utils/: env.rs  exec.rs  ffi_bindings.rs  migrations.rs  mod.rs  networking.rs  ssh.rs
src/vpn/: build.rs  deploy.rs  mod.rs  utils.rs  verify.rs
