[package]
name = "hal"
version = "0.0.4"
edition = "2024"
authors = ["Scott Key <scott@scottkey.dev>"]
description = "Homelab Automation Layer - CLI tool for managing homelab infrastructure"
license = "MIT"

[[bin]]
name = "hal"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.53", features = ["derive"] }
dotenv = "0.15"
anyhow = "1.0.100"
which = "8.0"
chrono = "0.4"
reqwest = { version = "0.12", default-features = false, features = [
  "json",
  "cookies",
  "rustls-tls",
  "blocking",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.9.8"
yaml-rust = "0.4"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }
whoami = "1.4"

[dev-dependencies]
cargo-watch = "8.5"
