[package]
name = "halvor"
version = "0.0.6"
edition = "2024"
authors = ["Scott Key <scott@scottkey.dev>"]
description = "Homelab Automation Layer - CLI tool for managing homelab infrastructure"
license = "MIT"

[[bin]]
name = "halvor"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.53", features = ["derive"] }
dotenv = "0.15"
anyhow = "1.0.100"
which = "8.0"
chrono = "0.4"
reqwest = { version = "0.12", default-features = false, features = [
  "json",
  "cookies",
  "rustls-tls",
  "blocking",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.9.8"
yaml-rust = "0.4"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }
whoami = "1.4"
flate2 = "1.0"
tar = "0.4"
zip = "6.0.0"
rusqlite = { version = "0.31", features = ["bundled"] }
aes-gcm = "0.10"
base64 = "0.22"
rand = "0.8"
glob = "0.3"
uuid = { version = "1.10", features = ["v4", "serde"] }

[dev-dependencies]
cargo-watch = "8.5"

[build-dependencies]
# No build dependencies needed - using std only
